[package]
name = "frame-system"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME system module"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"], optional = true }
frame-support = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { version = "6.0.0", default-features = false,  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-std = { workspace = true, default-features = false }
sp-version = { version = "5.0.0", default-features = false,  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-weights = { version = "4.0.0", default-features = false,  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }

[dev-dependencies]
criterion = "0.3.3"
sp-externalities = { version = "0.12.0",  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
#substrate-test-runtime-client = { version = "2.0.0",  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"log/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-version/std",
	"sp-weights/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]

[[bench]]
name = "bench"
harness = false
